@@ -30,7 +30,7 @@ module.exports = function (app, options) {
                 var req = new Request(env);
 
                 // Make sure the client accepts gzip encoding first.
-                if (req.acceptEncoding("gzip")) {
+                if (req.acceptsEncoding("gzip")) {
                     var gzip = zlib.createGzip(options);
 
                     if (typeof body == "string") {
