@@ -94,34 +94,40 @@ Request.prototype.__defineGetter__("remotePort", function remotePort() {
  * The name of the virtual location of the current request within the context of
  * the rest of the application.
  */
-Request.prototype.__defineGetter__("scriptName", function scriptName() {
-    return this.env.scriptName;
-});
-
-Request.prototype.__defineSetter__("scriptName", function setScriptName(value) {
-    this.env.scriptName = value;
+Object.defineProperty(Request.prototype, "scriptName", {
+    enumerable: true,
+    set: function (value) {
+        this.env.scriptName = value;
+    },
+    get: function () {
+        return this.env.scriptName;
+    }
 });
 
 /**
  * The remainder of the request URL's path.
  */
-Request.prototype.__defineGetter__("pathInfo", function pathInfo() {
-    return this.env.pathInfo;
-});
-
-Request.prototype.__defineSetter__("pathInfo", function setPathInfo(value) {
-    this.env.pathInfo = value;
+Object.defineProperty(Request.prototype, "pathInfo", {
+    enumerable: true,
+    set: function (value) {
+        this.env.pathInfo = value;
+    },
+    get: function () {
+        return this.env.pathInfo;
+    }
 });
 
 /**
  * The query string that was used in the URL.
  */
-Request.prototype.__defineGetter__("queryString", function queryString() {
-    return this.env.queryString;
-});
-
-Request.prototype.__defineSetter__("queryString", function queryString(value) {
-    this.env.queryString = value;
+Object.defineProperty(Request.prototype, "queryString", {
+    enumerable: true,
+    set: function (value) {
+        this.env.queryString = value;
+    },
+    get: function () {
+        return this.env.queryString;
+    }
 });
 
 /**
@@ -149,22 +155,6 @@ Request.prototype.__defineGetter__("contentLength", function contentLength() {
 Request.prototype.__defineGetter__("mediaType", function mediaType() {
     var contentType = this.env.contentType;
     return contentType && contentType.split(/\s*[;,]\s*/)[0].toLowerCase();
-});
-
-/**
- * Returns the name of the user agent making the request, as indicated in the
- * User-Agent request header.
- */
-Request.prototype.__defineGetter__("userAgent", function userAgent() {
-    return this.env.httpUserAgent;
-});
-
-/**
- * Returns the URI of the resource that referred the client, as indicated in the
- * Referer request header.
- */
-Request.prototype.__defineGetter__("referrer", function referrer() {
-    return this.env.httpReferer;
 });
 
 /**
@@ -268,9 +258,9 @@ Request.prototype.__defineGetter__("url", function url() {
  * Returns `true` if this request indicates the client accepts the given
  * `mediaType`.
  */
-Request.prototype.accept = function accept(mediaType) {
+Request.prototype.accepts = function accepts(mediaType) {
     if (!this.env.strataAccept) {
-        this.env.strataAccept = new Accept(this.env.httpAccept);
+        this.env.strataAccept = new Accept(this.accept);
     }
 
     return this.env.strataAccept.accept(mediaType);
@@ -280,9 +270,9 @@ Request.prototype.accept = function accept(mediaType) {
  * Returns `true` if this request indicates the client accepts the given
  * `charset`.
  */
-Request.prototype.acceptCharset = function acceptCharset(charset) {
+Request.prototype.acceptsCharset = function acceptsCharset(charset) {
     if (!this.env.strataAcceptCharset) {
-        this.env.strataAcceptCharset = new AcceptCharset(this.env.httpAcceptCharset);
+        this.env.strataAcceptCharset = new AcceptCharset(this.acceptCharset);
     }
 
     return this.env.strataAcceptCharset.accept(charset);
@@ -292,9 +282,9 @@ Request.prototype.acceptCharset = function acceptCharset(charset) {
  * Returns `true` if this request indicates the client accepts the given
  * `encoding`.
  */
-Request.prototype.acceptEncoding = function acceptEncoding(encoding) {
+Request.prototype.acceptsEncoding = function acceptsEncoding(encoding) {
     if (!this.env.strataAcceptEncoding) {
-        this.env.strataAcceptEncoding = new AcceptEncoding(this.env.httpAcceptEncoding);
+        this.env.strataAcceptEncoding = new AcceptEncoding(this.acceptEncoding);
     }
 
     return this.env.strataAcceptEncoding.accept(encoding);
@@ -304,9 +294,9 @@ Request.prototype.acceptEncoding = function acceptEncoding(encoding) {
  * Returns `true` if this request indicates the client accepts the given
  * `language`.
  */
-Request.prototype.acceptLanguage = function acceptLanguage(language) {
+Request.prototype.acceptsLanguage = function acceptsLanguage(language) {
     if (!this.env.strataAcceptLanguage) {
-        this.env.strataAcceptLanguage = new AcceptLanguage(this.env.httpAcceptLanguage);
+        this.env.strataAcceptLanguage = new AcceptLanguage(this.acceptLanguage);
     }
 
     return this.env.strataAcceptLanguage.accept(language);
@@ -607,3 +597,62 @@ Request.prototype.params = function params(callback) {
         }
     });
 }
+
+/**
+ * An array of all HTTP request header names.
+ */
+Request.headers = [
+    "Accept",
+    "Accept-Charset",
+    "Accept-Encoding",
+    "Accept-Language",
+    "Authorization",
+    "Cache-Control",
+    "Connection",
+    "Cookie",
+    "Content-Length",
+    "Content-MD5",
+    "Content-Type",
+    "Date",
+    "Expect",
+    "From",
+    "Host",
+    "If-Match",
+    "If-Modified-Since",
+    "If-None-Match",
+    "If-Range",
+    "If-Unmodified-Since",
+    "Max-Forwards",
+    "Pragma",
+    "Proxy-Authorization",
+    "Range",
+    "Referer",
+    "TE",
+    "Upgrade",
+    "User-Agent",
+    "Via",
+    "Warning"
+];
+
+// Define convenient getters for all request headers.
+Request.headers.forEach(function (headerName) {
+    var propertyName = utils.propertyName(headerName);
+
+    if (propertyName in Request.prototype) {
+        return;
+    }
+
+    var httpPropertyName = utils.httpPropertyName(headerName);
+
+    Object.defineProperty(Request.prototype, propertyName, {
+        enumerable: true,
+        get: function () {
+            return this.env[httpPropertyName];
+        }
+    });
+});
+
+// Alias for `referer`.
+Request.prototype.__defineGetter__("referrer", function referrer() {
+    return this.referer;
+});
