@@ -40,28 +40,7 @@ Response.prototype.__defineGetter__("empty", function empty() {
  * Returns `true` if this response uses chunked transfer encoding.
  */
 Response.prototype.__defineGetter__("chunked", function chunked() {
-    return this.headers["Transfer-Encoding"] === "chunked";
-});
-
-/**
- * Sets the Location header to redirect the client to the given `location`. The
- * `status` defaults to 302.
- */
-Response.prototype.redirect = function redirect(location, status) {
-    this.status = status || 302;
-    this.headers["Location"] = location;
-}
-
-Response.prototype.__defineGetter__("contentType", function contentType() {
-    return this.headers["Content-Type"];
-});
-
-Response.prototype.__defineGetter__("contentLength", function contentLength() {
-    return parseInt(this.headers["Content-Length"], 10) || 0;
-});
-
-Response.prototype.__defineGetter__("location", function location() {
-    return this.headers["Location"];
+    return this.transferEncoding === "chunked";
 });
 
 /**
@@ -178,3 +157,70 @@ Response.prototype.removeCookie = function removeCookie(name, value) {
 
     this.setCookie(name, value);
 }
+
+/**
+ * Sets the Location header to redirect the client to the given `location`. The
+ * `status` defaults to 302.
+ */
+Response.prototype.redirect = function redirect(location, status) {
+    this.location = location;
+    this.status = status || 302;
+}
+
+/**
+ * An array of all HTTP response header names.
+ */
+Response.headers = [
+    "Accept-Ranges",
+    "Age",
+    "Allow",
+    "Cache-Control",
+    "Connection",
+    "Content-Encoding",
+    "Content-Language",
+    "Content-Length",
+    "Content-Location",
+    "Content-MD5",
+    "Content-Disposition",
+    "Content-Range",
+    "Content-Type",
+    "Date",
+    "ETag",
+    "Expires",
+    "Last-Modified",
+    "Link",
+    "Location",
+    "P3P",
+    "Pragma",
+    "Proxy-Authenticate",
+    "Refresh",
+    "Retry-After",
+    "Server",
+    "Set-Cookie",
+    "Strict-Transport-Security",
+    "Trailer",
+    "Transfer-Encoding",
+    "Vary",
+    "Via",
+    "Warning",
+    "WWW-Authenticate"
+];
+
+// Define convenient getters/setters for all response headers.
+Response.headers.forEach(function (headerName) {
+    var propertyName = utils.propertyName(headerName);
+
+    if (propertyName in Response.prototype) {
+        return;
+    }
+
+    Object.defineProperty(Response.prototype, propertyName, {
+        enumerable: true,
+        set: function (value) {
+            this.setHeader(headerName, value);
+        },
+        get: function () {
+            return this.headers[headerName];
+        }
+    });
+});
