@@ -5,6 +5,7 @@ exports.normalizedHeaderName = normalizedHeaderName;
 exports.canonicalHeaderName = canonicalHeaderName;
 exports.capitalizedHeaderName = capitalizedHeaderName;
 exports.httpPropertyName = httpPropertyName;
+exports.propertyName = propertyName;
 exports.byteSizeFormat = byteSizeFormat;
 exports.escapeHtml = escapeHtml;
 exports.escapeRe = escapeRe;
@@ -82,8 +83,8 @@ function capitalizedHeaderName(name) {
 }
 
 /**
- * Converts the given header `name` to a string property name that could be
- * found in the environment for that header.
+ * Converts the given header `name` to a string that should be used as the
+ * environment property name for that header.
  *
  * "Accept" => "httpAccept"
  * "Content-Type" => "httpContentType"
@@ -91,6 +92,15 @@ function capitalizedHeaderName(name) {
  */
 function httpPropertyName(name) {
     return "http" + capitalizedHeaderName(name);
+}
+
+/**
+ * Converts the given header `name` to a string that could be used as a
+ * JavaScript object property name.
+ */
+function propertyName(name) {
+    var capitalName = capitalizedHeaderName(name)
+    return capitalName.substring(0, 1).toLowerCase() + capitalName.substring(1);
 }
 
 /**
